{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 60,
  "lineage": "42418417-9c0d-86ef-9a8b-092f96e6f90f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b81dc607b34870b",
            "arn": "arn:aws:ec2:us-east-1:286053287583:elastic-ip/eipalloc-02b81dc607b34870b",
            "association_id": "eipassoc-0766c0b7b5962143f",
            "domain": "vpc",
            "id": "eipalloc-02b81dc607b34870b",
            "instance": "i-057e2b4c267157519",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09e3abf8f98f227f8",
            "private_dns": "ip-10-20-1-140.ec2.internal",
            "private_ip": "10.20.1.140",
            "public_dns": "ec2-35-174-55-243.compute-1.amazonaws.com",
            "public_ip": "35.174.55.243",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "prod",
              "Name": "smartgia-bastion-eip",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-bastion-eip",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024dde7aec71b68d5",
            "arn": "arn:aws:ec2:us-east-1:286053287583:elastic-ip/eipalloc-024dde7aec71b68d5",
            "association_id": "eipassoc-058e0cd8210c7a914",
            "domain": "vpc",
            "id": "eipalloc-024dde7aec71b68d5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-016a5e0e8e03821c6",
            "private_dns": "ip-10-20-1-197.ec2.internal",
            "private_ip": "10.20.1.197",
            "public_dns": "ec2-35-170-172-134.compute-1.amazonaws.com",
            "public_ip": "35.170.172.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-nat-eip",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-nat-eip",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0030e4319cbf4dbf2",
            "arn": "arn:aws:ec2:us-east-1:286053287583:instance/i-057e2b4c267157519",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057e2b4c267157519",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "smartgia-prod-bastion-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e3abf8f98f227f8",
            "private_dns": "ip-10-20-1-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.1.140",
            "public_dns": "ec2-35-174-55-243.compute-1.amazonaws.com",
            "public_ip": "35.174.55.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098a13e800dfa5ec1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-023c5d3f863f9c89f",
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-bastion",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-bastion",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a91eccf56a73e8f3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.bastion_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286053287583:internet-gateway/igw-0b0f595511f1fc930",
            "id": "igw-0b0f595511f1fc930",
            "owner_id": "286053287583",
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-igw",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-igw",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-08cf8fb39b04be9f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:286053287583:loadbalancer/app/smartgia-prod-alb/8f502def3a83e418",
            "arn_suffix": "app/smartgia-prod-alb/8f502def3a83e418",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "smartgia-prod-alb-1211865669.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:286053287583:loadbalancer/app/smartgia-prod-alb/8f502def3a83e418",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "smartgia-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c2618e33392989f3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-023c5d3f863f9c89f"
              },
              {
                "subnet_id": "subnet-0d8d4df00416ff488"
              }
            ],
            "subnets": [
              "subnet-023c5d3f863f9c89f",
              "subnet-0d8d4df00416ff488"
            ],
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-alb",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-alb",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-08cf8fb39b04be9f1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:286053287583:listener/app/smartgia-prod-alb/8f502def3a83e418/8136bee2d09e7329",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:286053287583:targetgroup/smartgia-prod-tg/58f497562a1d5e60",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:286053287583:listener/app/smartgia-prod-alb/8f502def3a83e418/8136bee2d09e7329",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:286053287583:loadbalancer/app/smartgia-prod-alb/8f502def3a83e418",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:286053287583:targetgroup/smartgia-prod-tg/58f497562a1d5e60",
            "arn_suffix": "targetgroup/smartgia-prod-tg/58f497562a1d5e60",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:286053287583:targetgroup/smartgia-prod-tg/58f497562a1d5e60",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:286053287583:loadbalancer/app/smartgia-prod-alb/8f502def3a83e418"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "smartgia-prod-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-tg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-tg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08cf8fb39b04be9f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-024dde7aec71b68d5",
            "association_id": "eipassoc-058e0cd8210c7a914",
            "connectivity_type": "public",
            "id": "nat-038b3cff631d2cea3",
            "network_interface_id": "eni-016a5e0e8e03821c6",
            "private_ip": "10.20.1.197",
            "public_ip": "35.170.172.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-023c5d3f863f9c89f",
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-nat",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-nat",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286053287583:route-table/rtb-0804060e93c3e3cc9",
            "id": "rtb-0804060e93c3e3cc9",
            "owner_id": "286053287583",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-038b3cff631d2cea3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-private-rt",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-private-rt",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cf8fb39b04be9f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286053287583:route-table/rtb-05612b44503e63a33",
            "id": "rtb-05612b44503e63a33",
            "owner_id": "286053287583",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b0f595511f1fc930",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-public-rt",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-public-rt",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cf8fb39b04be9f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df903d05264df51d",
            "route_table_id": "rtb-0804060e93c3e3cc9",
            "subnet_id": "subnet-0435954b5356c30be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045a12f09e1226907",
            "route_table_id": "rtb-0804060e93c3e3cc9",
            "subnet_id": "subnet-00489ab3e0639029c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023823b776075fbb0",
            "route_table_id": "rtb-05612b44503e63a33",
            "subnet_id": "subnet-023c5d3f863f9c89f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb027ae6165b39e1",
            "route_table_id": "rtb-05612b44503e63a33",
            "subnet_id": "subnet-0d8d4df00416ff488"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286053287583:security-group/sg-0c2618e33392989f3",
            "description": "Allow HTTP/HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2618e33392989f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "smartgia-alb-sg",
            "name_prefix": "",
            "owner_id": "286053287583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Name": "smartgia-alb-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-alb-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cf8fb39b04be9f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286053287583:security-group/sg-0a91eccf56a73e8f3",
            "description": "SSH access to Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a91eccf56a73e8f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "18.206.107.24/29",
                  "18.206.107.32/29",
                  "18.206.107.40/29",
                  "18.206.107.48/29"
                ],
                "description": "SSH from EC2 Instance Connect us-east-1",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "181.199.46.135/32"
                ],
                "description": "SSH from my IP (secondary)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "181.199.58.240/32"
                ],
                "description": "SSH from my IP (current)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "smartgia-prod-bastion-sg",
            "name_prefix": "",
            "owner_id": "286053287583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-bastion-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-bastion-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cf8fb39b04be9f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286053287583:security-group/sg-06fe6bd2f33276a9a",
            "description": "Allow SSH from Bastion + HTTP from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fe6bd2f33276a9a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2618e33392989f3"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a91eccf56a73e8f3"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "smartgia-prod-private-sg-20260122212137851900000002",
            "name_prefix": "smartgia-prod-private-sg-",
            "owner_id": "286053287583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-private-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-private-sg",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cf8fb39b04be9f1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.bastion_sg",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286053287583:subnet/subnet-0435954b5356c30be",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0435954b5356c30be",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286053287583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-private-1",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-private-1",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-08cf8fb39b04be9f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286053287583:subnet/subnet-00489ab3e0639029c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00489ab3e0639029c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "286053287583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-private-2",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-private-2",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-08cf8fb39b04be9f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286053287583:subnet/subnet-023c5d3f863f9c89f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-023c5d3f863f9c89f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "286053287583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-public-1",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-public-1",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-08cf8fb39b04be9f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286053287583:subnet/subnet-0d8d4df00416ff488",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8d4df00416ff488",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "286053287583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-public-2",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-public-2",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "vpc_id": "vpc-08cf8fb39b04be9f1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:286053287583:vpc/vpc-08cf8fb39b04be9f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-036cb955304c5ec28",
            "default_route_table_id": "rtb-04b3495677b856e44",
            "default_security_group_id": "sg-04a7bbfd72e353374",
            "dhcp_options_id": "dopt-028dca79d0a739f38",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08cf8fb39b04be9f1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b3495677b856e44",
            "owner_id": "286053287583",
            "tags": {
              "Env": "prod",
              "Name": "smartgia-prod-vpc",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            },
            "tags_all": {
              "Env": "prod",
              "Name": "smartgia-prod-vpc",
              "Owner": "SMARTGIA",
              "Project": "smartgia"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}